src/objects/Trail__c.object
<CustomObject>
    <description>Object created as part of Developer Trail - Beginner in Salesforce Trailhead.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description Field.</description>
        <inlineHelpText>Please add a description.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <description>Distance Field.</description>
        <inlineHelpText>Please enter a distance.</inlineHelpText>
        <label>Distance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Inspection_Date__c</fullName>
        <description>Last Inspection Date Field.</description>
        <inlineHelpText>Please select a last expection date.</inlineHelpText>
        <label>Last Inspection Date</label>
        <type>Date</type>
    </fields>
    <label>Trail</label>
    <nameField>
        <label>Trail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>